Add base plugin

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Global Nest Tracker
+author=Zoinkwiz
+description=Allows for global tracking for what items have been used on the nest in Aldarin 
+tags=nest,egg
+plugins=com.example.GlobalNestTrackerPlugin
