fix: Correct path in plugin.properties

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,4 +2,4 @@ displayName=Global Nest Tracker
 author=Zoinkwiz
 description=Allows for global tracking for what items have been used on the nest in Aldarin 
 tags=nest,egg
-plugins=com.example.GlobalNestTrackerPlugin
+plugins=com.globalnesttracker.GlobalNestTrackerPlugin
